# org.eclipse.osee

./: .bazelrc  .gitattributes  .gitignore  .gitlab-ci.yml  .project  0001-feature-Improve-TransitionManager-performance.patch  0001-feature-TW16544-Improve-OSEE-Navigator-performance.patch  AGENTS.md  BUILD  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MANIFEST.MF  MODULE.bazel  NOTICE.md  README.md  README.txt  build_java_rust_ffi_jar.sh  changes.txt  docker-compose-dev.yml  package.json  pnpm-lock-Hand-Combined-Min.yaml  pnpm-lock-Hand-Combined-No_Dups.yaml  pnpm-lock-Hand-Combined.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  publish.xml  q  rebase-editor.sh  validateFiles.py
cli/applicability/: BUILD  Cargo.toml
cli/applicability/src/: applic_tag.rs  lib.rs  substitution.rs
cli/applicability_document_schema/: BUILD  Cargo.toml
cli/applicability_document_schema/src/: lib.rs
cli/applicability_lexer_applicability_structure/: BUILD  Cargo.toml
cli/applicability_lexer_applicability_structure/src/: lexer.rs  lib.rs
cli/applicability_lexer_applicability_structure/src/multi_line/: mod.rs  multi_line.rs  multi_line_lexer.rs
cli/applicability_lexer_applicability_structure/src/single_line_non_terminated/: non_terminated.rs
cli/applicability_lexer_applicability_structure/src/single_line_terminated/: terminated.rs
cli/applicability_lexer_applicability_structure/src/test_utils/: mod.rs
cli/applicability_lexer_applicability_structure_code_block/: BUILD  Cargo.toml
cli/applicability_lexer_applicability_structure_code_block/src/: code_block_lexer.rs  lib.rs  tokenize_other.rs
cli/applicability_lexer_applicability_structure_multi_line/: BUILD  Cargo.toml
cli/applicability_lexer_applicability_structure_multi_line/src/: lib.rs  multi_line_lexer.rs
cli/applicability_lexer_applicability_structure_single_line_non_terminated/: BUILD  Cargo.toml
cli/applicability_lexer_applicability_structure_single_line_non_terminated/src/: lib.rs  non_terminated.rs
cli/applicability_lexer_applicability_structure_single_line_terminated/: BUILD  Cargo.toml
cli/applicability_lexer_applicability_structure_single_line_terminated/src/: lib.rs  terminated.rs
cli/applicability_lexer_chunker/: BUILD  Cargo.toml
cli/applicability_lexer_chunker/src/: lib.rs
cli/applicability_lexer_config_rust/: BUILD  Cargo.toml
cli/applicability_lexer_config_rust/src/: lib.rs
cli/applicability_lexer_document_structure/: BUILD  Cargo.toml
cli/applicability_lexer_document_structure/src/: code_block.rs  document_structure_parser.rs  document_structure_text.rs  error.rs  failed_advance.rs  lib.rs  multi_line_terminated.rs  result_type.rs  single_line_non_terminated.rs  single_line_terminated.rs  token.rs
cli/applicability_lexer_multi_stage/: Cargo.toml
cli/applicability_lexer_multi_stage/benches/: applicability_lexer.rs
cli/applicability_lexer_multi_stage/src/: config_def.rs  config_group_def.rs  feature_def.rs  final_stage.rs  lib.rs  parser.rs  traits.rs  utility_def.rs
cli/applicability_lexer_multi_stage_lexer/: BUILD  Cargo.toml
cli/applicability_lexer_multi_stage_lexer/benches/: applicability_lexer.rs
cli/applicability_lexer_multi_stage_lexer/src/: lexer.rs
cli/applicability_parser/: BUILD  Cargo.toml  README.md
cli/applicability_parser/benches/: applicability_parser.rs
cli/applicability_parser/src/: applicability_parser_syntax_tag.rs  config.rs  config_group.rs  config_group_text.rs  config_text.rs  counter.rs  end.rs  feature.rs  feature_text.rs  lib.rs  match_applicability.rs  next.rs  sanitize_applicability.rs  split.rs  substitute_applicability.rs  substitution.rs  tag_parser.rs  types.rs
cli/applicability_parser_config/: BUILD  Cargo.toml
cli/applicability_parser_config/src/: applic_config.rs  lib.rs
cli/applicability_parser_errors/: BUILD  Cargo.toml
cli/applicability_parser_errors/src/: ast_transform_error.rs  lib.rs  nom_parser_error.rs
cli/applicability_parser_types/: BUILD  Cargo.toml
cli/applicability_parser_types/src/: applic_tokens.rs  applicability_parser_syntax_tag.rs  lib.rs
cli/applicability_parser_v2/: BUILD  Cargo.toml
cli/applicability_parser_v2/benches/: v2_parser.rs
cli/applicability_parser_v2/src/: lib.rs
cli/applicability_project/: BUILD.bazel  Cargo.toml
cli/applicability_project/src/: applicability_project.rs  applicability_project_file.rs  discover_project.rs  lib.rs  update_project.rs
cli/applicability_sanitization_preserve_line_numbers/: BUILD  Cargo.toml
cli/applicability_sanitization_preserve_line_numbers/src/: lib.rs
cli/applicability_substitution/: BUILD  Cargo.toml
cli/applicability_substitution/src/: lib.rs
cli/applicability_tokens_to_ast/: BUILD  Cargo.toml
cli/applicability_tokens_to_ast/src/: config.rs  config_group.rs  feature.rs  flatten_ast.rs  flatten_ast_state_machine.rs  latch.rs  lib.rs  multi_line.rs  non_terminated.rs  state_machine.rs  substitution.rs  terminated.rs  traits.rs  tree.rs  updatable.rs
cli/bat/: BUILD  Cargo.toml  README.md
cli/bat/src/: applic_config.rs  main.rs
cli/bat_lib/: BUILD  Cargo.toml
cli/bat_lib/src/: lib.rs
cli/bill_of_features/: BUILD  Cargo.toml
cli/bill_of_features/src/: lib.rs
cli/cli_logging/: BUILD  Cargo.toml
cli/cli_logging/src/: lib.rs
cli/feature_definition/: BUILD  Cargo.toml
cli/feature_definition/src/: lib.rs  v0.rs
rules_osee/: .bazelrc  BUILD  Jenkinsfile  MODULE.bazel  rules_osee.json
rules_osee/.devcontainer/: Dockerfile  devcontainer.json
rules_osee/bat/: BUILD  apply_applicability.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
rules_osee/bat/private/: BUILD  bat_versions.bzl  exists.bzl  host_alias.bzl  toolchains_repo.bzl
rules_osee/bazelrc/: .bazelrc
rules_osee/c_compile_test/: BUILD  MODULE.bazel  test.h
rules_osee/c_compile_test/__snapshot__/: BUILD
rules_osee/example/: BUILD  MODULE.bazel
rules_osee/plconfig/: BUILD  extensions.bzl  repositories.bzl
rules_osee/release/: BUILD  release.rc  version.bzl
rules_osee/workspace_example/: .bazelrc  PRODUCT_A.json  WORKSPACE  test.md
(+38758 files in other folders)
