 #####################################################################
 # Copyright (c) 2024 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[workspace]
resolver = "2"
members = [
    "cli/applicability", "cli/applicability_lexer", "cli/applicability_match",
    "cli/applicability_parser",
    "cli/applicability_parser_config", 
    "cli/applicability_parser_types", 
    "cli/applicability_path", 
    "cli/applicability_sanitization",
    "cli/applicability_sanitization_preserve_line_numbers",
    "cli/applicability_substitution",
    "cli/bat",
    "cli/pat"
]
[workspace.package]
license="EPL-2.0"
