#
# Copyright (c) 2024 Boeing
#
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#     Boeing - initial API and implementation
# 
module(
    name = "rules_osee",
    version = "0.2.6",
    bazel_compatibility = [">=7.1.0"],
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.3.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")

# Used for packaging
# Feature[INTERNAL_RELEASE_ONLY]
bazel_dep(name = "rules_pkg", version = "0.10.1", dev_dependency= True)
bazel_dep(name = "stardoc", version = "0.5.6", dev_dependency = True)
# End Feature

bat = use_extension("@rules_osee//bat:extensions.bzl","bat")

bat.toolchain(name="bat")

use_repo(bat, "bat")

register_toolchains("@bat//:all")