 #####################################################################
 # Copyright (c) 2024 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "applicability"
version = "1.0.0"
edition = "2024"
authors=["Luciano Vaglienti <luciano.t.vaglienti@boeing.com>"]
license.workspace=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
serde = { version = "1.0.188", optional = true, features = ["derive"] }
memchr = "2.7.4"