[package]
name = "applicability_lexer_applicability_structure"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
tracing = { version = "0.1.40" }
applicability_lexer_base = { path="../applicability_lexer_base"}
rand = "0.8.5"

[dev-dependencies]
applicability_lexer_config_markdown = { path="../applicability_lexer_config_markdown"}
criterion = "0.5.1"