 #####################################################################
 # Copyright (c) 2025 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "applicability_lexer_applicability_structure"
version = "1.1.13"
edition = "2024"
license.workspace = true

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
tracing = { version = "0.1.40" }
applicability_lexer_base = { path = "../applicability_lexer_base"}
applicability_document_schema = { path = "../applicability_document_schema" }
applicability_lexer_applicability_structure_base = { path = "../applicability_lexer_applicability_structure_base"}
applicability_lexer_applicability_structure_code_block = { path = "../applicability_lexer_applicability_structure_code_block" }
applicability_lexer_applicability_structure_single_line_non_terminated = { path = "../applicability_lexer_applicability_structure_single_line_non_terminated" }
applicability_lexer_applicability_structure_single_line_terminated = { path = "../applicability_lexer_applicability_structure_single_line_terminated" }
applicability_lexer_applicability_structure_multi_line = { path = "../applicability_lexer_applicability_structure_multi_line" }
rand = "0.8.5"
itertools = "0.14.0"

[dev-dependencies]
applicability_lexer_config_markdown = { path = "../applicability_lexer_config_markdown"}
applicability_lexer_applicability_structure_test_utils = { path = "../applicability_lexer_applicability_structure_test_utils" }
criterion = "0.5.1"