 #####################################################################
 # Copyright (c) 2025 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "applicability_lexer_applicability_structure_code_block"
version = "1.1.10"
edition = "2024"
license.workspace = true

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
rayon = { version = "1.10.0" }
tracing = { version = "0.1.40" }
applicability_lexer_base = { path = "../applicability_lexer_base"}
applicability_lexer_document_structure = { path = "../applicability_lexer_document_structure"}
applicability_document_schema = { path = "../applicability_document_schema" }
applicability_lexer_applicability_structure_base = { path = "../applicability_lexer_applicability_structure_base"}
applicability_lexer_applicability_structure_single_line_non_terminated = { path = "../applicability_lexer_applicability_structure_single_line_non_terminated" }
applicability_lexer_applicability_structure_single_line_terminated = { path = "../applicability_lexer_applicability_structure_single_line_terminated" }
applicability_lexer_applicability_structure_multi_line = { path = "../applicability_lexer_applicability_structure_multi_line" }
applicability_parser_errors = { path = "../applicability_parser_errors"}