 #####################################################################
 # Copyright (c) 2025 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "applicability_lexer_chunker"
version = "1.1.13"
edition = "2024"
license.workspace = true

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
applicability_lexer_base = { path = "../applicability_lexer_base"}

[dev-dependencies]
applicability_lexer_config_markdown = { path = "../applicability_lexer_config_markdown"}
applicability_lexer_multi_stage_lexer = { path = "../applicability_lexer_multi_stage_lexer"}
criterion = "0.5.1"