 #####################################################################
 # Copyright (c) 2025 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "applicability_lexer_document_structure"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
tracing = { version = "0.1.40" }
applicability_lexer_base = { path = "../applicability_lexer_base"}
applicability_parser_errors = { path = "../applicability_parser_errors"}
thiserror = "2.0.12"
memchr = "2.7.4"
itertools = "0.14.0"