[package]
name = "applicability_lexer_document_structure"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
tracing = { version = "0.1.40" }
applicability_lexer_base = {path="../applicability_lexer_base"}
thiserror = "2.0.12"
memchr = "2.7.4"
itertools = "0.14.0"