[package]
name = "applicability_lexer_multi_stage"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
rayon = { version = "1.10.0" }
tracing = { version = "0.1.40" }
applicability_lexer_base = { path="../applicability_lexer_base"}
applicability_lexer_first_stage = { path="../applicability_lexer_first_stage"}