[package]
name = "applicability_lexer_multi_stage"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
rayon = { version = "1.10.0" }
tracing = { version = "0.1.40" }
applicability_lexer_base = { path="../applicability_lexer_base"}
applicability_lexer_document_structure = { path="../applicability_lexer_document_structure"}
applicability_lexer_applicability_structure = { path="../applicability_lexer_applicability_structure"}
rand = "0.8.5"

[dev-dependencies]
applicability_lexer_config_markdown = { path="../applicability_lexer_config_markdown"}
criterion = "0.5.1"

[[bench]]
name = "applicability_lexer"
harness = false