 #####################################################################
 # Copyright (c) 2024 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "applicability_parser"
version = "1.0.0"
edition = "2021"
authors=["Luciano Vaglienti <luciano.t.vaglienti@boeing.com>"]
license.workspace=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-bufreader = { version = "0.2.0" }
serde = { version = "1.0.188", optional = true, features = ["derive"] }
applicability = {path="../applicability",features=["serde"]}