 #####################################################################
 # Copyright (c) 2024 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "applicability_parser_config"
version = "2.0.0"
edition = "2024"
publish = ["artifactory-remote"]
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.188", optional=false, features = ["derive"] }
serde_json = "1.0.107"
nom = "8.0.0"
nom_locate = "5.0.0"
applicability = {path="../applicability",features=["serde"]}
tracing = { version = "0.1.40" }
applicability_lexer_base = { path = "../applicability_lexer_base" }
applicability_lexer_applicability_structure = { path = "../applicability_lexer_applicability_structure" }
applicability_lexer_document_structure = { path = "../applicability_lexer_document_structure" }
applicability_lexer_config_markdown = { path="../applicability_lexer_config_markdown"}
applicability_lexer_config_cpp_like = { path="../applicability_lexer_config_cpp_like"}
applicability_lexer_config_build_file = { path="../applicability_lexer_config_build_file"}
applicability_lexer_config_rust = { path="../applicability_lexer_config_rust"}
applicability_lexer_config_latex = { path="../applicability_lexer_config_latex"}
applicability_lexer_config_custom = { path="../applicability_lexer_config_custom"}
applicability_parser_v2 = { path="../applicability_parser_v2"}
applicability_tokens_to_ast = { path="../applicability_tokens_to_ast" }
