 #####################################################################
 # Copyright (c) 2024 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "applicability_parser_config"
version = "1.1.13"
edition = "2024"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.12"
nom = "8.0.0"
nom_locate = "5.0.0"
tracing = { version = "0.1.40" }
applicability = { path = "../applicability",features = ["serde"]}
applicability_document_schema = { path = "../applicability_document_schema"}
applicability_parser_errors = { path = "../applicability_parser_errors"}
applicability_parser_v2 = { path = "../applicability_parser_v2"}
applicability_tokens_to_ast = { path = "../applicability_tokens_to_ast" }
