[package]
name = "applicability_parser_v2"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
nom="8.0.0"
nom_locate = "5.0.0"
rayon = { version = "1.10.0" }
tracing = { version = "0.1.40" }
applicability = { path = "../applicability" }
applicability_lexer_base = { path = "../applicability_lexer_base" }
applicability_document_schema = { path = "../applicability_document_schema" }
applicability_lexer_applicability_structure = { path = "../applicability_lexer_applicability_structure" }
applicability_lexer_applicability_structure_code_block = { path = "../applicability_lexer_applicability_structure_code_block" }
applicability_lexer_applicability_structure_single_line_terminated = { path = "../applicability_lexer_applicability_structure_single_line_terminated" }
applicability_lexer_applicability_structure_single_line_non_terminated = { path = "../applicability_lexer_applicability_structure_single_line_non_terminated" }
applicability_lexer_applicability_structure_multi_line = { path = "../applicability_lexer_applicability_structure_multi_line" }
applicability_lexer_document_structure = { path = "../applicability_lexer_document_structure" }
applicability_lexer_chunker = { path = "../applicability_lexer_chunker" }
applicability_lexer_multi_stage_lexer = { path = "../applicability_lexer_multi_stage_lexer" }
applicability_tokens_to_ast = { path = "../applicability_tokens_to_ast" }

[dev-dependencies]
pretty_assertions = "1.4.1"
applicability_parser_types = { path = "../applicability_parser_types" }
applicability_lexer_config_markdown = { path="../applicability_lexer_config_markdown"}
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "v2_parser"
harness = false