 #####################################################################
 # Copyright (c) 2025 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "applicability_project"
version = "1.1.12"
edition = "2024"
license.workspace = true

[dependencies]
glob = "0.3.3"
globset = { version = "0.4.14" }
thiserror = "2.0.12"
jwalk = "0.5"
path-slash = { version = "0.2.1" }
rayon = { version = "1.10.0" }
tracing = { version = "0.1.40" }
applicability = { path = "../applicability",features = ["serde"] }
applicability_parser_config = { path = "../applicability_parser_config" }
applicability_parser_errors = { path="../applicability_parser_errors" }
applicability_path = { path = "../applicability_path" }
applicability_tokens_to_ast = { path = "../applicability_tokens_to_ast"}
bill_of_features = { path = "../bill_of_features" }
feature_definition = { path = "../feature_definition"}