 #####################################################################
 # Copyright (c) 2024 Boeing
 #
 # This program and the accompanying materials are made
 # available under the terms of the Eclipse Public License 2.0
 # which is available at https://www.eclipse.org/legal/epl-2.0/
 #
 # SPDX-License-Identifier: EPL-2.0
 #
 # Contributors:
 #     Boeing - initial API and implementation
 ######################################################################
[package]
name = "applicability_sanitization_preserve_line_numbers"
version = "0.1.0"
edition = "2024"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
applicability = {path="../applicability",features=["serde"]}
applicability_parser_types = {path="../applicability_parser_types"}
applicability_match = {path="../applicability_match"}
applicability_substitution = {path="../applicability_substitution"}
applicability_sanitization = {path="../applicability_sanitization"}